# ReGoViS

./: CMakeLists.txt  README.md  package.xml
configs/: centauro_stack.yaml
launch/: centauro_rg.launch  panda_vs_rg_sim.launch
python/: image_processing_node.py  looper.py  reference_governor.py  reference_governor_panda.py  reference_governor_times_for_looper.csv  set_point_features.py
python/mpcref/: mpc_osqp_deltaqcnst_Qqdot.py
